--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <head>
             <title>WebSite</title>
             <link rel="stylesheet" type="text/css" href="css/style.css" media="screen" />
-            <!--<meta http-equiv="refresh" content="5,https://twitter.com/galfiin"> -->
+            <meta http-equiv="refresh" content="5,https://twitter.com/galfiin">
         </head>
         <body>
             <div class="imagem">
